Change usage of ML models

--- a/grandma_analyzer/notebooks/notebook.ipynb
+++ b/grandma_analyzer/notebooks/notebook.ipynb
@@ -2,19 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-13T10:08:17.279474700Z",
-     "start_time": "2023-06-13T10:08:12.534492700Z"
+     "end_time": "2023-06-13T10:09:29.068509600Z",
+     "start_time": "2023-06-13T10:09:29.048517400Z"
     }
    },
    "outputs": [],
    "source": [
-    "from enum import Enum\n",
-    "from sklearn.utils import shuffle\n",
-    "from sklearn import tree\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
@@ -33,24 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "outputs": [],
    "source": [
-    "DECISION_TREE = DecisionTreeClassifier()\n",
-    "RANDOM_FOREST = RandomForestClassifier(n_estimators=100)\n",
-    "NEURAL_NETWORK = MLPClassifier(max_iter=1000)\n",
-    "K_NEIGHBORS = KNeighborsClassifier()\n",
-    "SUPPORT_VECTOR_MACHINE = SVC()\n",
-    "GAUSSIAN_PROCESS = GaussianProcessClassifier(1.0 * RBF(1.0))\n",
-    "ADABOOST = AdaBoostClassifier(learning_rate=0.55)\n",
-    "NAIVE_BAYES = GaussianNB()\n",
-    "QUADRATIC_DISCRIMINANT_ANALYSIS = QuadraticDiscriminantAnalysis()"
+    "AVAILABLE_MODELS = {\n",
+    "    'DECISION_TREE': DecisionTreeClassifier(),\n",
+    "    'RANDOM_FOREST': RandomForestClassifier(n_estimators=100),\n",
+    "    'NEURAL_NETWORK': MLPClassifier(max_iter=1000),\n",
+    "    'K_NEIGHBORS': KNeighborsClassifier(),\n",
+    "    'SUPPORT_VECTOR_MACHINE': SVC(),\n",
+    "    #'GAUSSIAN_PROCESS': GaussianProcessClassifier(1.0 * RBF(1.0)), # to trwa tak z 2 lata nauka, wywalam xD\n",
+    "    'ADABOOST': AdaBoostClassifier(learning_rate=0.55),\n",
+    "    'NAIVE_BAYES': GaussianNB(),\n",
+    "    'QUADRATIC_DISCRIMINANT_ANALYSIS': QuadraticDiscriminantAnalysis()\n",
+    "}"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T10:08:19.088546200Z",
-     "start_time": "2023-06-13T10:08:19.080554100Z"
+     "end_time": "2023-06-13T10:13:02.330296Z",
+     "start_time": "2023-06-13T10:13:02.304298200Z"
     }
    }
   },
@@ -238,26 +237,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'accuracy': 0.9993127147766323, 'precision': 0.999099369558691, 'recall': 1.0, 'f1_score': 0.9995494819041899}\n"
+      "DECISION_TREE\n",
+      "{'accuracy': 0.9993127147766323, 'precision': 0.999099369558691, 'recall': 1.0, 'f1_score': 0.9995494819041899}\n",
+      "RANDOM_FOREST\n",
+      "{'accuracy': 0.9997709049255441, 'precision': 0.99969960949234, 'recall': 1.0, 'f1_score': 0.9998497821841671}\n",
+      "NEURAL_NETWORK\n",
+      "{'accuracy': 0.9945017182130584, 'precision': 0.9963942307692307, 'recall': 0.9963942307692307, 'f1_score': 0.9963942307692307}\n",
+      "K_NEIGHBORS\n",
+      "{'accuracy': 0.9876288659793815, 'precision': 0.9901197604790419, 'recall': 0.9936899038461539, 'f1_score': 0.9919016196760648}\n",
+      "SUPPORT_VECTOR_MACHINE\n",
+      "{'accuracy': 0.9390607101947308, 'precision': 0.9526907155529273, 'recall': 0.9681490384615384, 'f1_score': 0.9603576751117735}\n",
+      "ADABOOST\n",
+      "{'accuracy': 1.0, 'precision': 1.0, 'recall': 1.0, 'f1_score': 1.0}\n",
+      "NAIVE_BAYES\n",
+      "{'accuracy': 0.9857961053837343, 'precision': 0.9960510328068044, 'recall': 0.9852764423076923, 'f1_score': 0.9906344410876132}\n",
+      "QUADRATIC_DISCRIMINANT_ANALYSIS\n",
+      "{'accuracy': 0.9942726231386025, 'precision': 0.9966917293233083, 'recall': 0.9957932692307693, 'f1_score': 0.996242296708252}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Dev\\Github\\antiGrandmaScammer\\venv\\lib\\site-packages\\sklearn\\discriminant_analysis.py:926: UserWarning: Variables are collinear\n",
+      "  warnings.warn(\"Variables are collinear\")\n"
      ]
     }
    ],
    "source": [
-    "predictions, model = build_model_return_predictions(DECISION_TREE, features_train, classes_train, features_test)\n",
-    "metrics = calculate_metrics(classes_test, predictions)\n",
-    "print(metrics)"
+    "for model_name in AVAILABLE_MODELS:\n",
+    "    prediction_model = AVAILABLE_MODELS[model_name]\n",
+    "    predictions, model = build_model_return_predictions(prediction_model, features_train, classes_train, features_test)\n",
+    "    metrics = calculate_metrics(classes_test, predictions)\n",
+    "    print(model_name)\n",
+    "    print(metrics)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T10:08:39.153089500Z",
-     "start_time": "2023-06-13T10:08:39.119087400Z"
+     "end_time": "2023-06-13T10:13:12.279384900Z",
+     "start_time": "2023-06-13T10:13:06.827242200Z"
     }
    }
   },
