Add comments to notebook

--- a/grandma_analyzer/notebooks/notebook.ipynb
+++ b/grandma_analyzer/notebooks/notebook.ipynb
@@ -287,6 +287,16 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# TODO chłopaki\n",
+    "modele się mega przeuczają, trzeba sprawdzić przez jaki parametr tak jest, może obciąć zbiór wejściowy z jakiś gówno danych. Jak dane będą przefiltrowane i wciąż się będzie przeuczał to dropujecie kolumny sprawdzając czy jak ich nie ma to jest dużo gorzej, powinniście znaleźć jedną/parę po których usunięciu model stanie się gównem - o to chodzi"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
